--- a/index.html
+++ b/index.html
@@ -218,12 +218,12 @@
             } else if (size.includes('Medium')) {
                 mediumDiskTowerIndex = toTowerIndex;
             } else if (size.includes('Large')) {
-                largeDiskTowerIndex = toTowerIndex;            
+                largeDiskTowerIndex = toTowerIndex;
             }
         }
 
         function changeChoiceButtons() {
-            // set all to false
+            // set all buttons to false
             smLeftButton = false;
             smMiddleButton = false;
             smRightButton = false;
